# patch-lens

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
debian/: changelog  control  install
src/patchlens/: __init__.py  cli.py  formatters.py  models.py  runner.py  scanners.py  service.py  strategies.py
tests/: test_parsers.py
