[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchlens"
version = "0.1.0"
description = "CLI scanner for pending Linux updates across APT, Flatpak, and Snap."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "patch-lens contributors"}]
keywords = ["linux", "updates", "cli", "apt", "flatpak", "snap"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console"
]
dependencies = []

[project.scripts]
patchlens = "patchlens.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
